[package]
name = "qtools"
version = "0.1.0"
edition = "2024"
description = "A quantum analysis toolkit for pattern detection, signal processing, and synchronization"
authors = ["Preston Sparks <mprestonsparks@protonmail.com>"]
license = "proprietary"
repository = "https://github.com/mprestonsparks/quantum-analysis-toolkit"

[dependencies]
nalgebra = "0.32"
num-complex = "0.4"
rustfft = "6.1"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"

[dev-dependencies]
criterion = "0.4"